# HttpTest

./: .gitignore  .gitmodules  settings.gradle
app/: build.gradle  deps.gradle
app/src/androidTest/java/com/mgg/http/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  client.cc  curl_client.cc  curl_client.h  macros.h  native-lib.cpp
app/src/main/cpp/json/: value_as.cc  value_as.h
app/src/main/cpp/nearby/: http_client.h  http_client_factory.h  http_client_factory_impl.h  http_client_impl.cc  http_client_impl.h  http_request.cc  http_request.h  http_response.cc  http_response.h  http_status_code.cc  url.cc  utils.cc  utils.h
app/src/main/cpp/thread/: CompilerConstants.cpp  CompilerConstants.hpp  Format.h  KAssert.cpp  KAssert.h  Porting.cpp  ScopedThread.cpp  SingleThreadExecutor.cpp  Utils.hpp
app/src/main/java/com/mgg/http/: MainActivity.kt
app/src/test/java/com/mgg/http/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
